--- a/main/index.html
+++ b/main/index.html
@@ -130,12 +130,16 @@
 
     <div class="downArrow" id="goWear_wear"></div>
 </div>     
+    
+<div id="checkTravel">
+     <div class="downArrow" id="goWear_travel"></div>
+</div>     
 
 <div class="header2">    
      <div class="header2_buts">  
           <button class="weatherBut_clicked" id="weatherBut">Weather</button>
           <button class="wearBut" id="wearBut">Wear</button>
-          <button class="travelBut">Travel</button>
+          <button class="travelBut" id="travelBut">Travel</button>
      </div> 
      <div class="header2_footer"> 
           <h class="header2_footerH">  
