--- a/main/index.html
+++ b/main/index.html
@@ -28,7 +28,7 @@
 <div class="home_container" class="home_container">
      <div class="navigationMouseover" onmouseover="navigationMouse()"></div>
      <div class="navigation" id="navigation" onmouseover="navigationMouse()" onmouseout="navigationMouseOut()"> 
-      <div class="logoDiv"></div>  
+      <div class="logoDiv" id="logoDiv"></div>  
       <div class="menuDiv">
         <button class="homeBut" id="goHome">HOME</button>
         <button class="settingBut">SETTING</button>
