wear functions work now

--- a/main/index.html
+++ b/main/index.html
@@ -98,31 +98,31 @@
 <div id="checkWear"> 
    <div id="wearDiv">
        <div id="wearDiv1" class="wear">
-            <div class="wearImg" id=""></div>
+            <div class="wearImg" id="wearHat" onClick="putOnHat()"></div>
             <p class="wearP">Hat</p>
               <div class="wearicon" id="hatIcon"></div>
        </div>
 
        <div id="wearDiv2" class="wear">
-            <div class="wearImg" id=""></div>
+            <div class="wearImg" id="wearShirt" onClick="putOnShirt()"></div>
             <p class="wearP">Shirt</p> 
               <div class="wearicon" id="shirtIcon"></div>
        </div>
 
        <div id="wearDiv3" class="wear">
-            <div class="wearImg" id=""></div>
+            <div class="wearImg" id="wearPants" onClick="putOnPants()"></div>
             <p class="wearP">Pants</p>
               <div class="wearicon" id="pantsIcon"></div>
        </div>
 
        <div id="wearDiv4" class="wear">
-            <div class="wearImg" id=""></div>
+            <div class="wearImg" id="wearShoes" onClick="putOnShoes()"></div>
             <p class="wearP">Shoes</p>
               <div class="wearicon" id="shoesIcon"></div>
        </div>
 
        <div id="wearDiv5" class="wear">
-            <div class="wearImg" id=""></div>
+            <div class="wearImg" id="wearAcc" onClick="putOnAccessories()"></div>
             <p class="wearP">Accessories</p>
             <div class="wearicon" id="accessoriesIcon"></div>
        </div>
@@ -254,6 +254,9 @@
 </body>
     
 <script src="script/index.js"></script>
+<script src="script/weather.js"></script>
+<script src="script/wear.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlQCrZOdG7hScwu2caGsEjhabuVYzMxy8&callback=initMap">
     </script>    
