--- a/main/index.html
+++ b/main/index.html
@@ -65,28 +65,28 @@
        <div id="temperDiv1" class="temper">
             <div id="temperImg1"></div>
             <p class="temperP">Current Condition</p> 
-            <p id="con" class="temperNum">19</p>
+            <p id="con" class="temperNum">loading</p>
        </div>
 
        <div id="temperDiv2" class="temper">
             <div id="temperImg2"></div>
             <p class="temperP">Description</p> 
-            <p id="desc" class="temperNum">19</p>
+            <p id="desc" class="temperNum">loading</p>
        </div>
 
        <div id="temperDiv3" class="temper">
             <p class="temperP">Current Temperature</p>
-            <p id="currentTemp" class="temperNum">19</p>
+            <p id="currentTemp" class="temperNum">loading</p>
        </div>
 
        <div id="temperDiv4" class="temper">
             <p class="temperP">High Temperature</p>
-            <p id="highTemp" class="temperNum">23</p>
+            <p id="highTemp" class="temperNum">loading</p>
        </div>
 
        <div id="temperDiv5" class="temper">
             <p class="temperP">Low Temperature</p>
-            <p id="lowTemp" class="temperNum">18</p>   
+            <p id="lowTemp" class="temperNum">loading</p>   
        </div>
    </div>  
     
