Clothes icon changes according to the weather

--- a/main/index.html
+++ b/main/index.html
@@ -96,37 +96,37 @@
 </div>  
     
 <div id="checkWear"> 
-   <div id="wearDiv">
+<div id="wearDiv">
        <div id="wearDiv1" class="wear">
             <div class="wearImg" id="wearHat" onClick="putOnHat()"></div>
-            <p class="wearP">Hat</p>
+            <p class="wearP" id="hatP">Hat</p>
               <div class="wearicon" id="hatIcon"></div>
        </div>
 
        <div id="wearDiv2" class="wear">
             <div class="wearImg" id="wearShirt" onClick="putOnShirt()"></div>
-            <p class="wearP">Shirt</p> 
+            <p class="wearP" id="shirtP">Shirt</p> 
               <div class="wearicon" id="shirtIcon"></div>
        </div>
 
        <div id="wearDiv3" class="wear">
             <div class="wearImg" id="wearPants" onClick="putOnPants()"></div>
-            <p class="wearP">Pants</p>
+            <p class="wearP" id="pantsP">Pants</p>
               <div class="wearicon" id="pantsIcon"></div>
        </div>
 
        <div id="wearDiv4" class="wear">
             <div class="wearImg" id="wearShoes" onClick="putOnShoes()"></div>
-            <p class="wearP">Shoes</p>
+            <p class="wearP" id="shoesP">Shoes</p>
               <div class="wearicon" id="shoesIcon"></div>
        </div>
 
        <div id="wearDiv5" class="wear">
             <div class="wearImg" id="wearAcc" onClick="putOnAccessories()"></div>
-            <p class="wearP">Accessories</p>
+            <p class="wearP" id="accessoriesP">Accessories</p>
             <div class="wearicon" id="accessoriesIcon"></div>
        </div>
-   </div>   
+   </div>  
 
     <div class="downArrow" id="goWear_wear"></div>
 </div>     
