clothes change according to the weather

--- a/main/index.html
+++ b/main/index.html
@@ -150,7 +150,7 @@
           <h class="header2_footerH">  
              Today's Suggestions
           </h> 
-          <button class="header2_footerBut">  
+          <button class="header2_footerBut" id="learnWeater">  
               Learn More
           </button> 
       
@@ -160,14 +160,14 @@
     
 <div class="weatherSuggestion">
     <div class="suggestion_display">
-       <h1 class="suggestion_h1"> Perfect Day to Wear Raincoat</h1>
-       <p class="suggestion_p">Raincoats go back into antiquity in ancient China.[1][2] The earliest forms of Chinese constraints were made of straw and bamboo.[3][4] In Mandarin Chinese, the characters for "Suo-yi" (簑衣) mean "straw raincoat".[5] The coat was worn by farmers, fishermen and manual laborers as a protection from the sunlight, mud and rain while toiling in the dirt.</p>
+       <h1 class="suggestion_h1" id="suggestion_h1" > Perfect Day to Wear Raincoat</h1>
+       <p class="suggestion_p" id="suggestion_p">Raincoats go back into antiquity in ancient China.[1][2] The earliest forms of Chinese constraints were made of straw and bamboo.[3][4] In Mandarin Chinese, the characters for "Suo-yi" (簑衣) mean "straw raincoat".[5] The coat was worn by farmers, fishermen and manual laborers as a protection from the sunlight, mud and rain while toiling in the dirt.</p>
      <div class="suggestion_img"> 
-       <div class="suggestion_show"> 
-          <div class="suggestion_left">
+       <div class="suggestion_show" id="suggestion_show"> 
+          <div class="suggestion_left" id="suggestion_left">
            <div class="suggestion_leftImg"></div>
            </div>
-           <div class="suggestion_right">
+           <div class="suggestion_right" id="suggestion_right">
            <div class="suggestion_rightImg"></div>
            </div>
        </div>  
