combined and latest

--- a/main/about.html
+++ b/main/about.html
@@ -28,8 +28,8 @@
                 <br/>
                 <br/>
                 <br/> 
-                <p style="float:right; margin-top: 10%">
-                How is the weather?
+                <p style="float:right; margin-top: 5%">
+                                    How is the weather?
                 <br/>
                 What should I wear?
                 <br/>
@@ -65,11 +65,11 @@
     <img src="img/Screen%20Shot%202018-02-27%20at%206.58.50%20PM.png" id="main_img2"/>
     </p>
     
-    <p class="text_left">Look up your  recommended outfit...
+    <p class="text_left">Look up your  recommended outfit...<br><br>
     <img src="img/Screen%20Shot%202018-02-27%20at%206.58.58%20PM.png" id="main_img2"/>
     </p>
     
-    <p class="text_left">Purchase, or search for a outfit similar!
+    <p class="text_left">Purchase, or search for a outfit similar!<br><br>
     <img src="img/Screen%20Shot%202018-02-27%20at%206.59.18%20PM.png" id="main_img2"/>
     </p>
    
