I added some changes

--- a/main/index.html
+++ b/main/index.html
@@ -202,7 +202,7 @@
         
        <div id="temperDiv5_Future">
              <label class="switch2">
-      <input type="checkbox" checked>
+      <input type="checkbox" id="toggleMF2" checked>
       <span class="slider2 round2"></span>
     </label>
         <div id="wearDiv1_Future">
