5 day forecast pushes to the db

--- a/main/index.html
+++ b/main/index.html
@@ -238,11 +238,11 @@
    </div>
     
    <div class="forecast_buts">
-      <button class="forecast1" id="day1">Day 1</button>
-       <button class="forecast2" id="day2">Day 2</button>
-       <button class="forecast3" id="day3">Day 3</button>
-       <button class="forecast4" id="day4">Day 4</button>
-       <button class="forecast5" id="day5">Day 5</button>
+      <button class="forecast1" id="day1" onclick="day1()">Day 1</button>
+       <button class="forecast2" id="day2" onclick="day2()">Day 2</button>
+       <button class="forecast3" id="day3" onclick="day3()">Day 3</button>
+       <button class="forecast4" id="day4" onclick="day4()">Day 4</button>
+       <button class="forecast5" id="day5" onclick="day5()">Day 5</button>
    </div> 
    
       
