--- a/main/index.html
+++ b/main/index.html
@@ -306,14 +306,14 @@
     
 <div class="travelSuggestion">
         <div class="travel_display">
-       <h1 class="travel_h1"> Visit Musum of Anthropology on a Rainy Day</h1>
-       <p class="travel_p">BCIT offers Bachelor of Business Administration and Bachelor in Accounting degrees. Students must complete a BCIT diploma program to enroll into a degree program. Students can complete a bachelor degree within three years by completing a two year diploma program and one additional year of business studies. Degree students can complete an international student exchange for a term or year.</p>
+       <h1 class="travel_h1" id="travel_h1"> Visit Musum of Anthropology on a Rainy Day</h1>
+       <p class="travel_p" id="travel_p">BCIT offers Bachelor of Business Administration and Bachelor in Accounting degrees. Students must complete a BCIT diploma program to enroll into a degree program. Students can complete a bachelor degree within three years by completing a two year diploma program and one additional year of business studies. Degree students can complete an international student exchange for a term or year.</p>
      <div class="travel_img"> 
-       <div class="travel_show"> 
-          <div class="travel_left">
+       <div class="travel_show" id="travel_show"> 
+          <div class="travel_left" id="travel_left">
            <div class="travel_leftImg"></div>
            </div>
-           <div class="travel_right">
+           <div class="travel_right" id="travel_right">
            <div class="travel_rightImg"></div>
            </div>
        </div>  
@@ -329,7 +329,7 @@
           <h class="header5_footerH">  
              Visit MOA to learn more
           </h> 
-          <button class="header5_footerBut">  
+          <button class="header5_footerBut" id="learnTravel">  
               Visit 
           </button>   
 </div>     
